<resources>
    <string name="app_name">Countryapp</string>
    <string name="country_name">country_name</string>
    <string name="capital_name">capital_name</string>
    <string name="region_name">region_name</string>
    <string name="subregion_name">subregion_name</string>
    <string name="population">population</string>
    <string name="languages">languages</string>
    <string name="clear_all_data">clear_all_data</string>
</resources>