<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="true"

    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    app:cardUseCompatPadding="true"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/flag"
            android:src="@drawable/ic_launcher_background"

            android:layout_margin="5dp"
            android:contentDescription="@string/country_name"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:text="@string/country_name"
            android:textColor="@color/black"
            android:textSize="18sp"

            android:id="@+id/name"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/capital_name"
            android:id="@+id/capital"
            android:layout_marginTop="4dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/region_name"
            android:id="@+id/region"
            android:layout_marginTop="2dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/subregion_name"
            android:id="@+id/subregion"
            android:layout_marginTop="2dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/population"
            android:id="@+id/population"
            android:layout_marginTop="2dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/languages"
            android:id="@+id/languages"
            android:layout_marginTop="2dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>